upgrade PokemonDetailView
- add regional forme sprite